--- a/README.mkd
+++ b/README.mkd
@@ -78,4 +78,4 @@ License
 
 This project is licensed under the MIT License.
 
-    Copyright (c) 2010, 2012 Yu-Jie Lin
+    Copyright (c) 2010, 2012, 2014 Yu-Jie Lin
